nutype_test_suite/tests/ui/float/sanitize/unknown.stderr
error: Unknown sanitizer `convert_to_euro`
 --> tests/ui/float/sanitize/unknown.rs:3:19
  |
3 | #[nutype(sanitize(convert_to_euro))]
  |                   ^^^^^^^^^^^^^^^
